[package]
name = "obs-remote-volume-meter-native"
version = "1.1.0"
edition = "2024"
description = "A lightweight native OBS volume meter monitor"
license = "GPL-3.0-only"

[dependencies]
base64 = "0.22"
crossbeam-channel = "0.5"
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow", "persistence", "wayland", "x11"] }
iconflow = { version = "1.0", features = ["pack-lucide"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tungstenite = "0.28"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"
